--- a/new_notebooks/generate_testing_data.ipynb
+++ b/new_notebooks/generate_testing_data.ipynb
@@ -20,36 +20,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temps = np.array([0.01, 0.1, 0.4, 0.5, 0.6, 0.7, 0.8])\n",
-    "temps = np.array([0.2, 0.3])\n",
-    "rscales = np.linspace(1.0, 2.0, 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seed = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "12"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temps = np.array([0.01, 0.1, 0.4, 0.5, 0.6, 0.7, 0.8])\n",
+    "temps = np.array([0.2, 0.3])\n",
+    "rscales = np.linspace(1.0, 2.0, 6)\n",
+    "inputs = list(product(temps, rscales))\n",
+    "len(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 4300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4300"
+      ]
+     },
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,55 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01 1.0\n",
-      "0.01 1.2\n",
-      "0.01 1.4\n",
-      "0.01 1.6\n",
-      "0.01 1.8\n",
-      "0.01 2.0\n",
-      "0.1 1.0\n",
-      "0.1 1.2\n",
-      "0.1 1.4\n",
-      "0.1 1.6\n",
-      "0.1 1.8\n",
-      "0.1 2.0\n",
-      "0.4 1.0\n",
-      "0.4 1.2\n",
-      "0.4 1.4\n",
-      "0.4 1.6\n",
-      "0.4 1.8\n",
-      "0.4 2.0\n",
-      "0.5 1.0\n",
-      "0.5 1.2\n",
-      "0.5 1.4\n",
-      "0.5 1.6\n",
-      "0.5 1.8\n",
-      "0.5 2.0\n",
-      "0.6 1.0\n",
-      "0.6 1.2\n",
-      "0.6 1.4\n",
-      "0.6 1.6\n",
-      "0.6 1.8\n",
-      "0.6 2.0\n",
-      "0.7 1.0\n",
-      "0.7 1.2\n",
-      "0.7 1.4\n",
-      "0.7 1.6\n",
-      "0.7 1.8\n",
-      "0.7 2.0\n",
-      "0.8 1.0\n",
-      "0.8 1.2\n",
-      "0.8 1.4\n",
-      "0.8 1.6\n",
-      "0.8 1.8\n",
-      "0.8 2.0\n"
+      "0.2 1.0\n",
+      "0.2 1.2\n",
+      "0.2 1.4\n",
+      "0.2 1.6\n",
+      "0.2 1.8\n",
+      "0.2 2.0\n",
+      "0.3 1.0\n",
+      "0.3 1.2\n",
+      "0.3 1.4\n",
+      "0.3 1.6\n",
+      "0.3 1.8\n",
+      "0.3 2.0\n"
      ]
     }
    ],
@@ -116,7 +99,7 @@
     "def worker(temp, rscale, seed):\n",
     "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --len 5.0 --time 100.0 -o 1.0 --temp {temp} --rscale {rscale} --seed {seed} --dir /media/ian/Data/new_md_lv\")\n",
     "\n",
-    "inputs = product(temps, rscales)\n",
+    "\n",
     "\n",
     "pool = mp.Pool(7)\n",
     "\n",
@@ -144,16 +127,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": ""
   }
  },
  "nbformat": 4,
