--- a/new_notebooks/generate_testing_data.ipynb
+++ b/new_notebooks/generate_testing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import glob\n",
     "\n",
     "import sys\n",
     "import os\n",
@@ -20,49 +21,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def worker(seed):\n",
+    "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --len 3.5 --time 1000000 --seed {seed} --dir /media/ian/Data/final_md_lv equil-gd\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "pool = mp.Pool(7)\n",
+    "\n",
+    "pool.map_async(worker, range(seed, seed+10))\n",
+    "seed += 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = sorted(glob.glob(\"/media/ian/Data/final_md_lv/equil*.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "10"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temps = np.array([0.01, 0.1, 0.4, 0.5, 0.6, 0.7, 0.8])\n",
-    "temps = np.array([0.2, 0.3])\n",
-    "rscales = np.linspace(1.0, 2.0, 6)\n",
-    "inputs = list(product(temps, rscales))\n",
     "len(inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seed = 4300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4300"
+       "'/media/ian/Data/final_md_lv/equil_n-10_l-3.5_dt-1e-3_visc-5_seed-0_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.json'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,41 +116,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2 1.0\n",
-      "0.2 1.2\n",
-      "0.2 1.4\n",
-      "0.2 1.6\n",
-      "0.2 1.8\n",
-      "0.2 2.0\n",
-      "0.3 1.0\n",
-      "0.3 1.2\n",
-      "0.3 1.4\n",
-      "0.3 1.6\n",
-      "0.3 1.8\n",
-      "0.3 2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def worker(temp, rscale, seed):\n",
-    "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --len 5.0 --time 100.0 -o 1.0 --temp {temp} --rscale {rscale} --seed {seed} --dir /media/ian/Data/new_md_lv\")\n",
+    "def worker(init_config, seed):\n",
+    "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --unwrap --seed {seed} --init-config {init_config} --dir /media/ian/Data/final_md_lv variant ../variants.json\")\n",
     "\n",
     "\n",
     "\n",
     "pool = mp.Pool(7)\n",
     "\n",
-    "for temp, rscale in inputs:\n",
-    "    print(temp, rscale)\n",
-    "    iters = [(temp, rscale, s) for s in range(seed, seed+100)]\n",
-    "    pool.starmap(worker, iters)\n",
-    "    seed += 100"
+    "iters = zip(inputs, range(seed, seed+10))\n",
+    "pool.starmap(worker, iters)\n",
+    "seed += 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def worker2(init_config, seed):\n",
+    "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --temp 1e-2 --unwrap --seed {seed} --init-config {init_config} --dir /media/ian/Data/final_md_lv variant ../variants.json\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "pool = mp.Pool(7)\n",
+    "\n",
+    "iters = zip(inputs, range(seed, seed+10))\n",
+    "pool.starmap(worker2, iters)\n",
+    "seed += 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def worker3(init_config, seed):\n",
+    "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --temp 1e-3 --unwrap --seed {seed} --init-config {init_config} --dir /media/ian/Data/final_md_lv variant ../variants.json\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "pool = mp.Pool(7)\n",
+    "\n",
+    "iters = zip(inputs, range(seed, seed+10))\n",
+    "pool.starmap(worker3, iters)\n",
+    "seed += 10"
    ]
   },
   {
@@ -127,8 +185,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
