new validation dataset

--- a/new_notebooks/generate_testing_data.ipynb
+++ b/new_notebooks/generate_testing_data.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "10"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "'/media/ian/Data/final_md_lv/equil_n-10_l-3.5_dt-1e-3_visc-5_seed-0_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.json'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "40"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,6 +166,127 @@
     "iters = zip(inputs, range(seed, seed+10))\n",
     "pool.starmap(worker3, iters)\n",
     "seed += 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temps = [0.1, 0.01, 0.001]\n",
+    "vscales = [2, 4, 8, 16, 64, 256, 1024]\n",
+    "realizations = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre_iter = list(product(inputs, temps, vscales))\n",
+    "len(pre_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n",
+      "110\n",
+      "120\n",
+      "130\n",
+      "140\n",
+      "150\n",
+      "160\n",
+      "170\n",
+      "180\n",
+      "190\n",
+      "200\n",
+      "210\n",
+      "220\n",
+      "230\n",
+      "240\n",
+      "250\n",
+      "260\n",
+      "270\n",
+      "280\n",
+      "290\n",
+      "300\n",
+      "310\n",
+      "320\n",
+      "330\n",
+      "340\n",
+      "350\n",
+      "360\n",
+      "370\n",
+      "380\n",
+      "390\n",
+      "400\n",
+      "410\n",
+      "420\n",
+      "430\n",
+      "440\n",
+      "450\n",
+      "460\n",
+      "470\n",
+      "480\n",
+      "490\n",
+      "500\n",
+      "510\n",
+      "520\n",
+      "530\n",
+      "540\n",
+      "550\n",
+      "560\n",
+      "570\n",
+      "580\n",
+      "590\n",
+      "600\n",
+      "610\n"
+     ]
+    }
+   ],
+   "source": [
+    "def worker4(init_config, temp, vscale, seed):\n",
+    "    os.system(f\"/home/ian/Projects/work/md-lv/target/release/md-lv --temp {temp} --vscale {vscale} --unwrap --seed {seed} --init-config {init_config} --dir /media/ian/Data/final_md_lv_validation\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "pool = mp.Pool(7)\n",
+    "for r in range(realizations):\n",
+    "    if r%10 == 0:\n",
+    "        print(r)\n",
+    "    iters = [(pre_iter[i][0], pre_iter[i][1], pre_iter[i][2], seed+i) for i in range(len(pre_iter))]\n",
+    "    pool.starmap(worker4, iters)\n",
+    "    seed += len(iters)"
    ]
   },
   {
