Fixed bug in gen-variant

--- a/dep/new_notebooks/check_h5.ipynb
+++ b/dep/new_notebooks/check_h5.ipynb
@@ -362,7 +362,8 @@
    "hash": "31b3881c9f7eb96fc1e4bfddd4b9b52265e68da258ffece4250b1bec13bf910d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('analysis': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -375,9 +376,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.7.6"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
