Added LJ potential

--- a/notebooks/compute_msd_q.ipynb
+++ b/notebooks/compute_msd_q.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,27 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-1_dt-1e-3_visc-5_seed-1_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +129,7 @@
     "            init_x = f[\"meta\"][\"init_x\"][:,:dim]\n",
     "\n",
     "            for i in range(chunks):\n",
+    "                print(chunks, i)\n",
     "                Ibs = Ibs_hdl[i*max_slice:(i+1)*max_slice]\n",
     "                pos = pos_hdl[i*max_slice:(i+1)*max_slice,:,:,:dim]\n",
     "                msd = dynamics_msd_many(pos, init_x)\n",
@@ -152,7 +142,10 @@
     "                    MSD_bias[j] += np.sum(weights*msd, axis=0)\n",
     "                    for k in range(len(Q_bias)):\n",
     "                        Q_bias[k, j] += np.sum(weights*qs[k], axis=0)\n",
-    "                    pos_bias[j] += np.sum(np.tensordot(weights, pos, axes=2), axis=0)\n",
+    "                    for k in range(pos_bias.shape[0]):\n",
+    "                        for l in range(pos_bias.shape[1]):\n",
+    "                            tmp = weights[k, l]*pos[:,l]\n",
+    "                            pos_bias[k, l] += np.sum(tmp, axis=0)\n",
     "                    \n",
     "\n",
     "    for i in range(len(Q_bias)):\n",
@@ -167,28 +160,593 @@
     "    \n",
     "    out_dict = {\"time\": time, \"dVs\": dVs, \"Ib_mean\": Ib_mean, \"Ib_var\": Ib_var, \n",
     "                \"MSD_bias\": MSD_bias, \"Q_bias\": Q_bias, \"As\": As, \"pos_bias\": pos_bias,\n",
-    "                \"beta\": beta, \"N\": N, \"num_parts\": num_parts, \"dim\": dim}\n",
+    "                \"beta\": beta, \"N\": N, \"num_parts\": num_parts, \"dim\": dim, \"init_pos\": init_x,\n",
+    "                \"visc\": 5.0, \"L\": 3.5}\n",
     "    \n",
     "    return out_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-10.,  -9.,  -8.,  -7.,  -6.,  -5.,  -4.,  -3.,  -2.,  -1.,   0.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dVs = np.linspace(-10.0, 0.0, 11)\n",
+    "dVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0 ['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-1_dt-1e-3_visc-5_seed-1_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']\n",
+      "100 0\n",
+      "100 1\n",
+      "100 2\n",
+      "100 3\n",
+      "100 4\n",
+      "100 5\n",
+      "100 6\n",
+      "100 7\n",
+      "100 8\n",
+      "100 9\n",
+      "100 10\n",
+      "100 11\n",
+      "100 12\n",
+      "100 13\n",
+      "100 14\n",
+      "100 15\n",
+      "100 16\n",
+      "100 17\n",
+      "100 18\n",
+      "100 19\n",
+      "100 20\n",
+      "100 21\n",
+      "100 22\n",
+      "100 23\n",
+      "100 24\n",
+      "100 25\n",
+      "100 26\n",
+      "100 27\n",
+      "100 28\n",
+      "100 29\n",
+      "100 30\n",
+      "100 31\n",
+      "100 32\n",
+      "100 33\n",
+      "100 34\n",
+      "100 35\n",
+      "100 36\n",
+      "100 37\n",
+      "100 38\n",
+      "100 39\n",
+      "100 40\n",
+      "100 41\n",
+      "100 42\n",
+      "100 43\n",
+      "100 44\n",
+      "100 45\n",
+      "100 46\n",
+      "100 47\n",
+      "100 48\n",
+      "100 49\n",
+      "100 50\n",
+      "100 51\n",
+      "100 52\n",
+      "100 53\n",
+      "100 54\n",
+      "100 55\n",
+      "100 56\n",
+      "100 57\n",
+      "100 58\n",
+      "100 59\n",
+      "100 60\n",
+      "100 61\n",
+      "100 62\n",
+      "100 63\n",
+      "100 64\n",
+      "100 65\n",
+      "100 66\n",
+      "100 67\n",
+      "100 68\n",
+      "100 69\n",
+      "100 70\n",
+      "100 71\n",
+      "100 72\n",
+      "100 73\n",
+      "100 74\n",
+      "100 75\n",
+      "100 76\n",
+      "100 77\n",
+      "100 78\n",
+      "100 79\n",
+      "100 80\n",
+      "100 81\n",
+      "100 82\n",
+      "100 83\n",
+      "100 84\n",
+      "100 85\n",
+      "100 86\n",
+      "100 87\n",
+      "100 88\n",
+      "100 89\n",
+      "100 90\n",
+      "100 91\n",
+      "100 92\n",
+      "100 93\n",
+      "100 94\n",
+      "100 95\n",
+      "100 96\n",
+      "100 97\n",
+      "100 98\n",
+      "100 99\n",
+      "10.0 ['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-10_dt-1e-3_visc-5_seed-2_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']\n",
+      "100 0\n",
+      "100 1\n",
+      "100 2\n",
+      "100 3\n",
+      "100 4\n",
+      "100 5\n",
+      "100 6\n",
+      "100 7\n",
+      "100 8\n",
+      "100 9\n",
+      "100 10\n",
+      "100 11\n",
+      "100 12\n",
+      "100 13\n",
+      "100 14\n",
+      "100 15\n",
+      "100 16\n",
+      "100 17\n",
+      "100 18\n",
+      "100 19\n",
+      "100 20\n",
+      "100 21\n",
+      "100 22\n",
+      "100 23\n",
+      "100 24\n",
+      "100 25\n",
+      "100 26\n",
+      "100 27\n",
+      "100 28\n",
+      "100 29\n",
+      "100 30\n",
+      "100 31\n",
+      "100 32\n",
+      "100 33\n",
+      "100 34\n",
+      "100 35\n",
+      "100 36\n",
+      "100 37\n",
+      "100 38\n",
+      "100 39\n",
+      "100 40\n",
+      "100 41\n",
+      "100 42\n",
+      "100 43\n",
+      "100 44\n",
+      "100 45\n",
+      "100 46\n",
+      "100 47\n",
+      "100 48\n",
+      "100 49\n",
+      "100 50\n",
+      "100 51\n",
+      "100 52\n",
+      "100 53\n",
+      "100 54\n",
+      "100 55\n",
+      "100 56\n",
+      "100 57\n",
+      "100 58\n",
+      "100 59\n",
+      "100 60\n",
+      "100 61\n",
+      "100 62\n",
+      "100 63\n",
+      "100 64\n",
+      "100 65\n",
+      "100 66\n",
+      "100 67\n",
+      "100 68\n",
+      "100 69\n",
+      "100 70\n",
+      "100 71\n",
+      "100 72\n",
+      "100 73\n",
+      "100 74\n",
+      "100 75\n",
+      "100 76\n",
+      "100 77\n",
+      "100 78\n",
+      "100 79\n",
+      "100 80\n",
+      "100 81\n",
+      "100 82\n",
+      "100 83\n",
+      "100 84\n",
+      "100 85\n",
+      "100 86\n",
+      "100 87\n",
+      "100 88\n",
+      "100 89\n",
+      "100 90\n",
+      "100 91\n",
+      "100 92\n",
+      "100 93\n",
+      "100 94\n",
+      "100 95\n",
+      "100 96\n",
+      "100 97\n",
+      "100 98\n",
+      "100 99\n",
+      "10.0 ['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-101_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-106_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-116_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-111_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-136_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-121_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-126_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-141_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-146_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.1_time-100_dt-1e-3_visc-5_seed-131_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-214-db88f8bef17d>:88: RuntimeWarning: invalid value encountered in true_divide\n",
+      "<ipython-input-29-f0415f4eaf20>:92: RuntimeWarning: invalid value encountered in true_divide\n",
       "  Q_bias[i] /= norm\n",
-      "<ipython-input-214-db88f8bef17d>:89: RuntimeWarning: invalid value encountered in true_divide\n",
+      "<ipython-input-29-f0415f4eaf20>:93: RuntimeWarning: invalid value encountered in true_divide\n",
       "  MSD_bias /= norm\n",
-      "<ipython-input-214-db88f8bef17d>:93: RuntimeWarning: overflow encountered in true_divide\n",
+      "<ipython-input-29-f0415f4eaf20>:97: RuntimeWarning: overflow encountered in true_divide\n",
       "  pos_bias[i, j] /= norm[i, j]\n",
-      "<ipython-input-214-db88f8bef17d>:93: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "<ipython-input-29-f0415f4eaf20>:97: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  pos_bias[i, j] /= norm[i, j]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0 ['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-1_dt-1e-3_visc-5_seed-3_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']\n",
+      "100 0\n",
+      "100 1\n",
+      "100 2\n",
+      "100 3\n",
+      "100 4\n",
+      "100 5\n",
+      "100 6\n",
+      "100 7\n",
+      "100 8\n",
+      "100 9\n",
+      "100 10\n",
+      "100 11\n",
+      "100 12\n",
+      "100 13\n",
+      "100 14\n",
+      "100 15\n",
+      "100 16\n",
+      "100 17\n",
+      "100 18\n",
+      "100 19\n",
+      "100 20\n",
+      "100 21\n",
+      "100 22\n",
+      "100 23\n",
+      "100 24\n",
+      "100 25\n",
+      "100 26\n",
+      "100 27\n",
+      "100 28\n",
+      "100 29\n",
+      "100 30\n",
+      "100 31\n",
+      "100 32\n",
+      "100 33\n",
+      "100 34\n",
+      "100 35\n",
+      "100 36\n",
+      "100 37\n",
+      "100 38\n",
+      "100 39\n",
+      "100 40\n",
+      "100 41\n",
+      "100 42\n",
+      "100 43\n",
+      "100 44\n",
+      "100 45\n",
+      "100 46\n",
+      "100 47\n",
+      "100 48\n",
+      "100 49\n",
+      "100 50\n",
+      "100 51\n",
+      "100 52\n",
+      "100 53\n",
+      "100 54\n",
+      "100 55\n",
+      "100 56\n",
+      "100 57\n",
+      "100 58\n",
+      "100 59\n",
+      "100 60\n",
+      "100 61\n",
+      "100 62\n",
+      "100 63\n",
+      "100 64\n",
+      "100 65\n",
+      "100 66\n",
+      "100 67\n",
+      "100 68\n",
+      "100 69\n",
+      "100 70\n",
+      "100 71\n",
+      "100 72\n",
+      "100 73\n",
+      "100 74\n",
+      "100 75\n",
+      "100 76\n",
+      "100 77\n",
+      "100 78\n",
+      "100 79\n",
+      "100 80\n",
+      "100 81\n",
+      "100 82\n",
+      "100 83\n",
+      "100 84\n",
+      "100 85\n",
+      "100 86\n",
+      "100 87\n",
+      "100 88\n",
+      "100 89\n",
+      "100 90\n",
+      "100 91\n",
+      "100 92\n",
+      "100 93\n",
+      "100 94\n",
+      "100 95\n",
+      "100 96\n",
+      "100 97\n",
+      "100 98\n",
+      "100 99\n",
+      "25.0 ['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-10_dt-1e-3_visc-5_seed-4_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']\n",
+      "100 0\n",
+      "100 1\n",
+      "100 2\n",
+      "100 3\n",
+      "100 4\n",
+      "100 5\n",
+      "100 6\n",
+      "100 7\n",
+      "100 8\n",
+      "100 9\n",
+      "100 10\n",
+      "100 11\n",
+      "100 12\n",
+      "100 13\n",
+      "100 14\n",
+      "100 15\n",
+      "100 16\n",
+      "100 17\n",
+      "100 18\n",
+      "100 19\n",
+      "100 20\n",
+      "100 21\n",
+      "100 22\n",
+      "100 23\n",
+      "100 24\n",
+      "100 25\n",
+      "100 26\n",
+      "100 27\n",
+      "100 28\n",
+      "100 29\n",
+      "100 30\n",
+      "100 31\n",
+      "100 32\n",
+      "100 33\n",
+      "100 34\n",
+      "100 35\n",
+      "100 36\n",
+      "100 37\n",
+      "100 38\n",
+      "100 39\n",
+      "100 40\n",
+      "100 41\n",
+      "100 42\n",
+      "100 43\n",
+      "100 44\n",
+      "100 45\n",
+      "100 46\n",
+      "100 47\n",
+      "100 48\n",
+      "100 49\n",
+      "100 50\n",
+      "100 51\n",
+      "100 52\n",
+      "100 53\n",
+      "100 54\n",
+      "100 55\n",
+      "100 56\n",
+      "100 57\n",
+      "100 58\n",
+      "100 59\n",
+      "100 60\n",
+      "100 61\n",
+      "100 62\n",
+      "100 63\n",
+      "100 64\n",
+      "100 65\n",
+      "100 66\n",
+      "100 67\n",
+      "100 68\n",
+      "100 69\n",
+      "100 70\n",
+      "100 71\n",
+      "100 72\n",
+      "100 73\n",
+      "100 74\n",
+      "100 75\n",
+      "100 76\n",
+      "100 77\n",
+      "100 78\n",
+      "100 79\n",
+      "100 80\n",
+      "100 81\n",
+      "100 82\n",
+      "100 83\n",
+      "100 84\n",
+      "100 85\n",
+      "100 86\n",
+      "100 87\n",
+      "100 88\n",
+      "100 89\n",
+      "100 90\n",
+      "100 91\n",
+      "100 92\n",
+      "100 93\n",
+      "100 94\n",
+      "100 95\n",
+      "100 96\n",
+      "100 97\n",
+      "100 98\n",
+      "100 99\n",
+      "25.0 ['/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-107_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-102_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-117_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-112_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-122_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-137_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-142_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-127_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-147_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5', '/home/igraham/data/md-lv/genvariant_n-10_l-3.5_t-0.04_time-100_dt-1e-3_visc-5_seed-132_phi-0.9489_rA-0.5000_rB-0.7000_vs-1.h5']\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n",
+      "10 5\n",
+      "10 6\n",
+      "10 7\n",
+      "10 8\n",
+      "10 9\n",
+      "10 0\n",
+      "10 1\n",
+      "10 2\n",
+      "10 3\n",
+      "10 4\n"
      ]
     }
    ],
@@ -200,9 +758,10 @@
     "    beta = 1/temp\n",
     "\n",
     "    data_files = glob.glob(f\"/home/igraham/data/md-lv/genvariant_*_t-{temp}_time-{time}_*\")\n",
+    "    print(beta, data_files)\n",
     "    my_dict = process_variant_batch(data_files, beta, dVs)\n",
     "\n",
-    "    np.savez(f\"/home/igraham/data/md-lv/process_t-{temp}_time-{time}.npz\", **my_dict)"
+    "    np.savez(f\"/home/igraham/data/md-lv/process_fixed_t-{temp}_time-{time}.npz\", **my_dict)"
    ]
   },
   {
